# OnyxWriter

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: release.yml
docs/architecture/: 20260615-bundle-rich-editor-tools.md  20260615-bundle-startup-autosave-theme.md  20260615-mermaid-bundle-graph.md  20260615-release-readiness-hardening.md  20260615-workspace-editor-hardening.md  202606150326-okf-editor-foundation.md  202606150422-jsonm-design-system-runtime.md  20260616-bundle-navigation-shell.md  20260616-developer-project-bundles.md  20260619-native-menus-keyboard-shortcuts.md  20260629-agent-access-core.md  20260629-encrypted-bundles.md
docs/guides/: encrypted-bundles.md  okf-in-code-projects.md  onyx-agent-authoring.md  onyx-cli.md  onyx-mcp.md
docs/release/: agent-access.md  auto-updates.md  desktop-packaging.md  encrypted-storage.md  linux-build.md  manual-qa.md  push-hygiene.md  v0.1.0-alpha.md  v0.1.1-alpha.md  v0.1.10-alpha.md  v0.1.11-alpha.md  v0.1.12-alpha.md  v0.1.13-alpha.md  v0.1.14-alpha.md  v0.1.15-alpha.md  v0.1.2-alpha.md  v0.1.3-alpha.md  v0.1.4-alpha.md  v0.1.5-alpha.md  (+5 more)
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: design_system_fs.rs  encrypted_storage.rs  lib.rs  main.rs  menu.rs  okf_fs.rs
tests/: agent-access.test.ts
(+167 files in other folders)
