[package]
name = "onyxwriter"
version = "0.1.6"
description = "A local-first Open Knowledge Format editor"
authors = ["onyxwriter contributors"]
license = "MIT"
repository = "https://github.com/activetwist/OnyxWriter"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "onyxwriter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
